Updated website to fix all the html errors, alter the maps API, and add some figure captions

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body{
 }
 /*-- banner --*/
 .banner{
-	background: url(../images/6.jpg) no-repeat 0px 0;
+	background: url(../images/SF3.jpeg) no-repeat 0px 0;
     background-size: cover;
     padding: 1em 0 5em;
 }
