--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body{
 	margin:0;
 }
 .agile-logo h1 a{
-    color: #FFFfff;
+    color: #000000;
     font-size: .4em;
     letter-spacing: 12px;
     font-family: 'Roboto Slab', serif;
